[package]
name = "flarenv"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Nix-based agent environment manager"

[dependencies]
rand = "0.10"
russh = "0.61"
tokio = { version = "1.17", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[lib]
name = "flarenv"
path = "src/lib.rs"

[[bin]]
name = "flarenvd"
path = "src/main.rs"

[profile.dev]
debug = true

[profile.release]
lto = "thin"
strip = true
